# ChangeLog for net-misc/cgminer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.51 2013/11/16 15:51:05 blueness Exp $

*cgminer-3.8.2 (16 Nov 2013)

  16 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.2.ebuild,
  cgminer-3.8.1.ebuild:
  Version bump

  13 Nov 2013; Anthony G. Basile <blueness@gentoo.org> cgminer-3.8.1.ebuild:
  Remove ADL_SDK, bug #491026 comment 9

  12 Nov 2013; Anthony G. Basile <blueness@gentoo.org> cgminer-3.8.1.ebuild:
  Keyword ~arm, bug #491026 comment 2

*cgminer-3.8.1 (12 Nov 2013)

  12 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.1.ebuild,
  cgminer-3.7.2.ebuild:
  Version bump, bug #491026, thanks Sarah White <kuzetsa@gmail.com>

*cgminer-3.7.2 (05 Nov 2013)

  05 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.7.2.ebuild,
  cgminer-3.6.6.ebuild, metadata.xml:
  Version bump

*cgminer-3.6.6 (26 Oct 2013)

  26 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.6.6.ebuild,
  -cgminer-3.6.4.ebuild:
  Version bump, remove older

*cgminer-3.6.4 (18 Oct 2013)

  18 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.6.4.ebuild,
  -cgminer-3.6.2.ebuild:
  Version bump again

*cgminer-3.6.2 (17 Oct 2013)

  17 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.6.2.ebuild,
  -cgminer-3.3.3.ebuild, -cgminer-3.3.4.ebuild, -cgminer-3.4.2.ebuild,
  -cgminer-3.6.1.ebuild:
  Version bump, remove older

*cgminer-3.6.1 (15 Oct 2013)

  15 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.6.1.ebuild,
  cgminer-3.5.0.ebuild, metadata.xml:
  Version bump

*cgminer-3.5.0 (01 Oct 2013)

  01 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.5.0.ebuild,
  cgminer-3.4.3.ebuild:
  Version bump

*cgminer-3.4.3 (14 Sep 2013)

  14 Sep 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.4.3.ebuild,
  cgminer-3.4.2.ebuild:
  Version bump

*cgminer-3.4.2 (03 Sep 2013)
