@@ -9,6 +9,6 @@ LICENSE=GPL-3
 RDEPEND=net-misc/curl dev-libs/jansson ncurses? ( sys-libs/ncurses ) avalon? ( virtual/libusb:1 ) bflsc? ( virtual/libusb:1 ) bitforce? ( virtual/libusb:1 ) bitfury? ( virtual/libusb:1 ) icarus? ( virtual/libusb:1 ) modminer? ( virtual/libusb:1 )
 REQUIRED_USE=|| ( avalon bflsc bitforce bitfury icarus klondike modminer )
 SLOT=0
-SRC_URI=http://ck.kolivas.org/apps/cgminer/cgminer-3.8.2.tar.bz2
+SRC_URI=http://ck.kolivas.org/apps/cgminer/3.8/cgminer-3.8.2.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	libtool	5932e418cf62147cad2d902718aacc56	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ba72d6a95ae5bef72bd5a85f638ef8bb
+_md5_=113895dcc5de5c53eb68ca2816183cf5
