@@ -10,4 +10,4 @@ RDEPEND=>=x11-base/xorg-server-1.10 media-libs/mesa[egl,gbm] gles? ( || ( media-
 SLOT=0
 SRC_URI=http://xorg.freedesktop.org/releases/individual/driver/glamor-egl-0.5.1.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	libtool	5932e418cf62147cad2d902718aacc56	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	xorg-2	17812f511eef87a499b62ab14e6aeaad
-_md5_=2b95554235414f606129c8078fd841c6
+_md5_=fc900f48962595a37cb188045d9ee3d3
