@@ -3,32 +3,32 @@ Hash: SHA256
 
 DIST cgminer-3.6.6.tar.bz2 2390408 SHA256 2155404e32baea27447da001725a78c83fd33a89b7984ce04b32564d263bb382 SHA512 1f913118fd3a2757a9fa9b2ffb8f1527109e90626044362ce94bbf93e876448cace189bc6c6e0c28f33d71ecc0488312d60530ef20baadf9894e82891b15171d WHIRLPOOL 709185ec229c38c6a00a7bfaaa1ba95fa7c6da58379097212f6df0f85938dcece025ec61fb57a9d6b0fbd7c194552188661579f5392a78e9d1c40eb2742aa1cd
 DIST cgminer-3.7.2.tar.bz2 2413059 SHA256 ff0944489642a3eabd24840d1dfabafb6184a9d3ad682f7c76e2fae18f93a90d SHA512 9596dbf2225f884b6a41d3f82fd6dacfc83aa20e21c62e2aad44d60cf96658ab7bc0c5cdd26c5c00a18f639ce3998718687df56a3f4d0bc33349076f5dd8514c WHIRLPOOL dc115840d2cb9e28e346c7cbcd558c26de196069add29f2b7f70992c9572a27fa6c8501e7e2211c716c99c7dfe56bc2e604e3c33783391930af63a70a7241b12
-DIST cgminer-3.8.1.tar.bz2 2340726 SHA256 6d350647e18735d095dce8fd2703f0be56d6f1152953089fbe22204b6972c44f SHA512 0a91094f4786c3b2db5ee98c0f8c1d7423d9497b993e1eb5eb88a8fa7773eb72af904b26f7aeff9e56b4de06af1cd98cd62d8fd9f36b686ddcd4d31c09f9fc0a WHIRLPOOL 018886d648af398fc7066431960329d2c0272ea9c4c5592a528b381e9f503396ccbad00b20e975db01c65936c8101cac397cd5ae9e8bd1ad24f311a886d75b08
 DIST cgminer-3.8.2.tar.bz2 2346344 SHA256 5c0d979aec9fb35d67541e124fdcb11386cf12c4e8bfbb425af85bbdf876036c SHA512 5de9d77248d07b00b3c817ec9a998aca3b450d4cfffc73ad80ecf836fa0113f33154c769cb3ffdd9602b0dfef519fdecb03fba01cb20b2b15bf268e577fc9b70 WHIRLPOOL a05e1b5ae004f0460eb853677f8e3191c3bed0f4537907d0a213c81e9f81234cf24e91ffa8efeab0f5ca5156e22a3e0d3c458ab30428cf4636abab472e14356d
+DIST cgminer-3.8.3.tar.bz2 2345499 SHA256 d88b5e85638dcc3437544aa35b97e6ec7823ed2516f972c1cdd862681f59f0d4 SHA512 5a99297152b65e886b7aa0b4ba23e5c6557a98efcc6d6ce675fc72774a18eb172caf3f9cd21d90fa062ea77d4914920e18940eede198d1ed954109a3c2a50df1 WHIRLPOOL d64e683926b92a6e7c9636e46a2c2e7ca06b3dc90d1caf4062b1df7186081e8c8bfbce96aa838655ba131e9ac714dec5042971c47c4ab9d245db09883ffd2a04
 DIST v3.4.3.tar.gz 6473497 SHA256 3b44da12e5f24f603eeeefdaa2c573bd566c5c50c9d62946f198e611cd55876b SHA512 72760a9d340b6c76c652bcbc4b36cdf82f551c9edfa824b0c82022f8ab3267ae9891ec822bfbfe96c226ebd554caad02f06e3cbdcae867c832e5739627e29064 WHIRLPOOL df571cde83087c7c430f4098af6708ae772f863599aa0dcf4a9cafbb7303ddf2fd25db2ac58d95b895ca17b94bf56fc843388065f4ed9cec8755961d3470b955
 DIST v3.5.0.tar.gz 6478443 SHA256 58eef9155557627ceaf4a90da4bf4df91c0ae0c3d737c99fd6ed26022d57cca7 SHA512 889d8c81eb392b4c489aebcbe9a7a6186f3975dcaad9e9d24f3c34cf4de6b96eb1086113cd770b573472ca27e9187f6cf1e08e7b1dc19094f3f252c9469c90a4 WHIRLPOOL a916735cfab5ec79b9dcd59f29ccd66a48201cf8a2bd0ccec127cb9fd2fa1a8cbd00677f557066ef1a98b7b9e4c6dd92d3266aaef3236ec76d8b4a75a39c103c
 EBUILD cgminer-3.4.3.ebuild 2392 SHA256 e60fa2b32e48794d34afb8cc701565db3c3ce3d464b71f45468a4a3bfaccf101 SHA512 30f48309f9eb27ffaf7fd9274d44a9cb156d1d885453488cfcf4b1f3e9e61fd01abb73dfc5af5210e1d0f40a205ab2e4e351948a262bc887b17c58aa54ad601b WHIRLPOOL 30e266c5872bc3981ffc21e5c3a0259afad4a507c327fd05484d9944a72a0bd2767a5b8c141611075e86cf6c4dcb9f51826254b54c8570a22e0370d2ca74dcae
 EBUILD cgminer-3.5.0.ebuild 2392 SHA256 df7d0b89da708ceaea2d547e37a5abb26d5702003e28a4f350c1bb60d5b6a71d SHA512 66ea288d4f411b76d39da5dd125d3f49a2736163fe32698eeb07ddd1b28907b94afa3cd886f3722d5a19d54b52dc6c82347aa9583e9bb475e4893d03e4745ab6 WHIRLPOOL 3a5bbacdafbaa8193d7e5aeb388a17727543912c1d1ad45ea282332d2c6c6ffdb949c09edb5537409242e9aec2a50926a575359eef67231104cebd5343d350c9
 EBUILD cgminer-3.6.6.ebuild 2246 SHA256 37af5c65b88927b277c7b23560e06493e20f05cfdd4839912c5217aaac2b56e0 SHA512 61c7ade93afc4ff53b380a02e770dff63e07b0e1043804d53c3223d4847b6f82139278a26762f971777131188d927b1ebcfdcaed7b3ec074cc24531fa20e97a8 WHIRLPOOL 2058df81103247feec17631f4f4950722432c5ac5dae36270fb726e288ad964fe81ad77ba3ba907fca81cf2241971ba9a0aac15239e05ad11424006d7ac631cc
 EBUILD cgminer-3.7.2.ebuild 2319 SHA256 22731c3356fb46512e17b22c4433a69ce83f8357501b9f7c876bc29d852996c8 SHA512 7c34fc6601e9b672c41692be42b838ffec00223786cf34606b4ff3a50efc67d8054e2988361564f1d58cbbd0b51c22f7efafe47fe09896af034408e760491a18 WHIRLPOOL 634d745d640fa692095da5417afba64d930bfe245b623c01552af74cb1a3c4bb91527373e3643e5870e52b9281df79803648b8ce196434fa72026848b5488db6
-EBUILD cgminer-3.8.1.ebuild 1962 SHA256 690c6c2ad85c5654ef27e6305f2e31374846c6572497827ab602a8707b2c630c SHA512 917973d5fd2d0eb9602dda12fe37bac2520baa3e916cb21273ad4c32a9020a3fd0805a6d3ba7a11f010e337acb7d36125ec60274d07ac75648d26c3eb08f917a WHIRLPOOL 9e5836fadcaf30c5f7b1a1cfe4e45b7bf4d6221d9144d1e7a28d6a5ca5f0ed4787ea33a88dfc457f354315f2daa2d695e4cb4b915e34d17db17d8e73b643fc68
-EBUILD cgminer-3.8.2.ebuild 1962 SHA256 e18a7b602e313fa6baa2ebfd52def85d06207bdb0f505ac318c6a5a9a86d057e SHA512 986f2704abb205b0d77e768ece4a991090bb1ccb30ac388666c0f033ee7f217c94bb3718f066854df69b2a071a3cfb0d45d1a8b6688ef4826146181fe6d2f149 WHIRLPOOL c4228062ec95aeacf49583ac0b6a6cd9d31484ff9c56e85780154fc0e6f3fae7226a065df0aff429cefcd2fca30724174dac9dc848f78e7b3113f3e2aebd7eb0
-MISC ChangeLog 8417 SHA256 b6d3bfc5a514b64f2f5643a2b39e10dec089e7ccf0de2832cc8c1ac95975946c SHA512 add918de637018c7cc88a170e12b87cba2d8378171479a9d9532a2575447ddbe73fc17891e94b5b8262f10a5f7d2366e0e8a4fccf09d84012292eacb4527d86a WHIRLPOOL d772e6d9cd4c023d1da3fd350d974a0090671b5b1374747407b8853d379818ed615ffb8356f539a3ab6b5244a71c2d4a4bf5f09f085f594a2caf0f35f7c8d372
+EBUILD cgminer-3.8.2.ebuild 1962 SHA256 600b79c199fddac560069fead02380c053dc5fb4ae94fdf885d93a426f71da2f SHA512 6dc08c4932740e9cb651931d8a4e1dde04153e2b164486221aa62d2cf9e74ddaefcf9a850cbe65dac6f6859f24bdf2a4dbdf93a7d97ae4de8d6677d6ee0b1880 WHIRLPOOL 26eb149aa052a999a060fd2efbe68f148df7095364183321a7ebe253ce8ab9a7290e8024aa99cfef0a122fa311cb0d16b42e4ccf10d65a29b113275cf88dfdec
+EBUILD cgminer-3.8.3.ebuild 1962 SHA256 246824e78478ff32cde0f67aabf9cca4bb447d78fbfe5e3c8bc5aa7132ba9c13 SHA512 fcaeb6a3bfa8489ec61d9d87daf0f716a5144e669fa35a78b5bef7e612b1ab51f870700824046897c179d8b7ed714ff220cdfc168b1fdb923bda255f9f6b36f0 WHIRLPOOL 8ed2abcf7d71d2191bbba28220b7151c80ed1f601945f7bcaf73e2baa9dfa06573d58ef260c71f889afb798357600b57827375f7558f1c10ff8613f0667c399d
+MISC ChangeLog 8603 SHA256 18643f210a5f3edb9cb359cc1378382aab53fcc25a20aa94d9f1f9c537eeb3bb SHA512 9a0fff3727fe9107c66b57afea8a42ec6b4e5cb972421a724c9e43d9482fd51be58b0921547062a5a6c5a7314e44471eb1a605f6bc24ac7d5d35bd4ed987fb6b WHIRLPOOL a04a59b0f464f51b4c08a9ab465c3ee1d58272a218804b686a2b404e0aea6edd4d4ebc0c366b9287c377ffb6e15b78073a4311f86af08510981adda6f8f064b2
 MISC metadata.xml 1259 SHA256 fc042199778a0a822cfae5f782092072f572b0b3690f062b9d63888638e0fcfc SHA512 d08a8b51749e52314791fcb04ab3b1187f01d2f23960d189eb1b7e5be890ec3d7ae47c3dfc7f88addaa92f2f57cbadfb7506286a715ddf67155f18c955a2bba3 WHIRLPOOL 9e2765b81146699708295545f8d6f184866d603ce23cbccbb96ae1ffa5b4fd97ff3070c78ceae25d0660e82dfa728d7626acb9aa5a2fd7bc897f266a56205eec
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSh5SLAAoJEJOE+m71LUu6o64P/iSJ2Ahp9WS8D0AasoQPbfs7
-8ojS9T+FlDrWdYNJy/Vq+QMtUMQlql4uRjW1XHHV3/nFI2pX/VvTBgpxDx1p0q5Q
-OeUoh7rKYNvJHJxI2xyPv0IgXDKXIF0qNacEMe/ahvrscM43/6QzvdqTCEeexZ1V
-N6i8BkWAaRG6gEAbXbwi+D5mWQ2hahCHmaiuyfhj/S2r4EdU89Kj5NfPRGSGhEJu
-sk0uWsiAhOlyd42j3mMM6iAONbLSyxE2ZXVP1n+aFnbavULp+hn93JvLJ2uqrPP5
-ujlV+N0+aOiajg2DPoFYaobSFG9dAj74RuxJBdQt0EPRyC6+KAHZ4YP4+KEhd57j
-gUMaHV7TcS52nRPmspc7UWJlbIrXTc9QO/ZgB2D24KE424RnNPJKtIfNyaKE0mfw
-JNhIMK8lepe+g0Hc1QtLUaWgcXnibpyKWmTuwDKsgcEaDlErN++ysnRatL4xpdvN
-C8MXOVbs11/jpOQxBSQfai1Ckm+v7fcyOE4SaxJsPJ0gJwEQTNlIpDdGRaeAxCwa
-BeQyoCZL+VFkKWJu55Ut5J5uEqgJNkuzdu27QZecSGojaoFR3XHvLa5Rv+iVFlFm
-6LpS8NmD7uDHzLpw8D4pJO6koGpRhjWEKg3ieKB2B5ZBGA2/lRKCpMhndUwA33hF
-b+++U4Q5e/shJYwUwEal
-=LLDB
+iQIcBAEBCAAGBQJSkmSXAAoJEJOE+m71LUu6RjoQAI+52NxQjfxegvkRC4O0epey
+szdTS1XQdc0wCMneDNSnOPD3U7IVIN6kSbzX6ZMk1iRotgrBqKgL/inr97bWUjwL
+N91xzTdR6Z17Kw2A/6Ls9RlIEQLLPKW8aCQNwo8shFalydw4lMGnFbMaKl/zSckA
+v2NWIe3b52//9BG6meANTGPUgAtWGp/LH1JPM3YBPpvgRMk9HeDSaZth+U2O3WTC
+qaokshTeMEgftshv4wZFTD1iDmA3l6n8Fi5umYPwExJlOkDEdP6qbLtL9GRLjwTc
+2ueg9daxzH5xQVZFC7eFYKy1j1DpKAQnsg9wNu3mCQrDMYItphCY1bjYXwUnsuvD
+T43AmT7sODQv+OTG4Gpuu2yUuv3tvs8yENZsHXR+dpG8g1fWeKo3hZFQWUnYRlDq
+JliPCpXmsRgLeqH08hjcW1sGR3hWRqrchprky5Rb3Vd37DKtkek/POf7prGwg7+w
+wESdnHwuM80xK2vI+c5bXXq6o31bfMupklYwirdrFMWvDD0ikyOGbmriqWyDqLUu
+Sbqrb8yu8N84n5ezSholcKWjgdHm/a3SYIfLJYEQQdwsZEJqKswLXKBrYxfWCtam
+4ZOLlJlzKIEWfPsbrk41Br7qHHoPvEQpTIeb6rl02Sk+wUQD7HWqT1blsekPHAH6
+IWfgoAGna01Nfki1eLGw
+=LecU
 -----END PGP SIGNATURE-----
