@@ -1,27 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST glamor-0.5.tar.gz 134709 SHA256 92c5a8b1f7484a756e808979d7126a0e89e0848075da2be905ca2c8366eb9608 SHA512 834cf2e1ed67e6b9bad3f249e5d6ed500c31d6876969325ca5461cacd90e7efc39fbf35bf9e87ce60d251f9db93e86ec91b514cdef5d18e303618d785b1a1fa8 WHIRLPOOL 8b5abee26f95dfd50559bc7843f0861e9b7f21dd2bce9cd507ced931e360456217f95bcacd87a0b6e0c1b37ea185d4629f8a36bdb8c4a3736a211348632c2812
 DIST glamor-egl-0.5.1.tar.bz2 415902 SHA256 f42805b68e2bddc90cb5d9d3811e4f2176659c5686f295865839b20b7be7f359 SHA512 64d319e81a08b70f450c171152a218be3cad8ba8995806606a3f8a62e39e8e4c3efdf19576265cc5b3f48b98a8267305878cf58b18351780968101404133292b WHIRLPOOL 82947f2956d64a8908b4ae5679b0a4a9ac8e4bd99cf938f887a73111dc71e2bd75128d819268f53bf9c7d5112e48949d8e425725e5579abc830106873bf6ad1e
 EBUILD glamor-0.5-r1.ebuild 865 SHA256 9dff3751cc51b2e800303390d3bffaa5a18a297f9dbb3c45dc56c66c904f72eb SHA512 0f763be6ff306ee0e1623da1d445902acfc3b16d2450990730101923ec1b251b805002f402e13d7893e9063b17716212eb7fdacdc58135a7ca3af337ba6609bb WHIRLPOOL 7754a65fecf00b1e61e7d99a5a29e836ec6587e601775d06456ed417240bfcfb92f0310c9e6aa1b101554437a1b1778fb55cbda7a687cd525b9601738f1852dc
-EBUILD glamor-0.5.1.ebuild 939 SHA256 a608335afbd0dc47d17ef4a1d3a27459945edec786e9479fab4d447aa992b407 SHA512 915ea47eaf9f003483bad3870ce551bb1bd91a10b0c284fb085a6a475b8da7177e9ec7006ae8c9aba8397d53d9a97fcc3539da38a420b4e9a9e7dd865387ebe1 WHIRLPOOL eb917a5abc4d553de38f8ec1b55a06abb17acc06125c364f5756ce368e23bffeead62615bd0b458fc67c331fdf3f1c71942d62a08687e0c79cccb34dd93a1ffc
+EBUILD glamor-0.5.1.ebuild 1076 SHA256 a553c0461ca1d6029fde4683e7e1c9ed8eb58ecff825968f14bf075d8134f86c SHA512 b7f3f963738d14c9c0e3e3e71df338fff39c9231b6dbce3c735698a2ddc847954bea0d1a7172dbf1e7dc327d2bd484561de74a64d33d97ddda5271954e025833 WHIRLPOOL 049c9f2a1dd98b3a5f4df244defa488e21c830fe585e7695b16aa06465fa5657b364772fb735ce5d2bd54e094b9fc89363380b560e670f89c0952d19f8c41cc0
 EBUILD glamor-0.5.ebuild 823 SHA256 388aa3a7ebbc499aad662bd773f3f877e257edd1bcd6eed29036c695d9975dbe SHA512 509d91cdac4b3463f921e9bb60ffd15b9365610352735891625f04a118eb408df0fcecf06f4f63e9632a0954e583d3f98da98660789d5f0c0292619487cfa83f WHIRLPOOL 9baa0f4dc40c44ea9fcc6dd453db4665315fa26103c3313f89d2f98a312b3e4fb8ee177859e0530971c5df478b4528043e22150812c8b4b3001cdacada5edff4
-MISC ChangeLog 3202 SHA256 80e348b8eb95203941994f8cdd93415b3a323ecfa9503e1815897c179086e950 SHA512 9cb1e77b71f8931599d8489306c9a1e6d86d2bdefaaa2ea680f622cf77ab4f939f0b7b28476dcc1fc7143680c40f128128481a7ea29201be8d78977c06413bcd WHIRLPOOL 49953d2a153d9e0870e79d597e3526fe242825a65dc3219af5178fdd196e0c842386e15c62cca7d8ed2a7ba84094eb244550f0123c2d6bb2ae786c701efd705c
+MISC ChangeLog 3336 SHA256 c689e8ebc26577940ed69bb14be26031736bf4e613d93fdeaae856d9057f852a SHA512 ce94e6262f95ad6421801ddd2e2e092109f8dbbf3927f7697409cd93a59e83293502385b37dc25658842d4167840402528f98ed5547df3791e97fa0b335c8a4e WHIRLPOOL fb50492f451b92235457471cf3fd9e7a3d1aed8e47090d7c3a12b4306057c0452a70d42e55a7edda175c9f4f18a572b1fd8001e5e881c3a3fd6c1116531e2475
 MISC metadata.xml 223 SHA256 205a40dbb7a17f67f6d4efcda4c5649d9f56f9b27f2e00d370a24f61103bff26 SHA512 5a5214399812d56f3393dc5baa5066e0127c99aeed8cbd3315d1fb3e7119232a5cd94272e46c7ede9a1b25c7f99909754a09962514b9748f3537cd1f7d627033 WHIRLPOOL fe893e5445e4ac431992a98c126ea52ed7495b334e217b992d86a3aa200ba587d1a5ca3ff9e83a68f1216ce47e3093125ca0d4bb572b0654bf0e7a587b1cc57c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSU5LyAAoJELp701BxlEWfAiMQAJtEBIooh8u3MMYejYn3HG5C
-hHy5jYDxu8vY3mlRzRH2qM62H941MUB18GbSYJ9bFx0dfn6rEk1GgJsBKSn54eR1
-/lqtKy4c95gVFLLowktKPs1mpisK19wo1SFbheOwPywDIO4B0Tt3plgsING7iFMH
-l6IxZgex9NjTtywHRJ3rtUrenja/S31NWMh1gz7AAZQqtXEL6mn77Ve3bCdV/ClE
-Eu+q9cbgB3Ui7kibnlkSp2AxvBuTDtic4XVtCQ0CmYV0XVqS80NAfqRQplCUJki8
-rtcz2Tiy0DRh4MzfgZO6/5RYo7yQpGJ87CalBVKz52on37OO5BufsrxyQu52WSqZ
-VnQgiNMnyh+YUQIAI4L/QkLWh6njHD1CflJbOjICAfsCYwlT4CX6XlDdPUXkwWlu
-ln2yyY1kFas34NbmXeLY7WfwjggGlVjj7elYBqgxYQVOlidN2kevpTNkKmtSwJyF
-dXY9ZM6Pgb1y9f+gAf3lMAAXuTmFi3bIhrKr/oWWSQrUlbovYf7AedANBWROreF9
-0IrXjcGYxtqJIwWLqAGkwfTCWRIYXN1r1L91o8By0yY48FoR3ZqBu7my/tAw8+/s
-UZdWS+FJzLFFzjFRHDdwXBF0W+kvW7YopsN4w7QCW5+K5c2s3iab7r/ydtxmCFki
-+A51ZTUzWCQTcS9L5EqH
-=wzbh
+iEYEAREIAAYFAlKSZsgACgkQe6JQqv15gH93LwCfe3fMg9LV1rhrY3GqIIfwSn4D
+RmEAn2jz/fB5sMlxMcwZyLQ/L5K6kT3C
+=DM51
 -----END PGP SIGNATURE-----
