@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/cgminer
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.51 2013/11/16 15:51:05 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.52 2013/11/24 20:40:58 blueness Exp $
+
+*cgminer-3.8.3 (24 Nov 2013)
+
+  24 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.3.ebuild,
+  -cgminer-3.8.1.ebuild, cgminer-3.8.2.ebuild:
+  Version bump, remover older
 
 *cgminer-3.8.2 (16 Nov 2013)
 
